--- a/index.html
+++ b/index.html
@@ -8,61 +8,56 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="bg-img">
-</div>
-<section>
-    <nav class="navbar  is-transparent" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-            <a class="navbar-item" href="https://bulma.io">
-            </a>
-            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
-               data-target="navbarBasicExample">
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-            </a>
-        </div>
 
-        <div id="navbarBasicExample" class="navbar-menu">
-            <div class="navbar-start">
+<nav class="navbar  is-transparent" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+        <a class="navbar-item" href="https://bulma.io">
+        </a>
+        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+           data-target="navbarBasicExample">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+        </a>
+    </div>
 
-                <div class="navbar-item has-dropdown">
-                    <a class="navbar-item" href="https://bulma.io/">
-                        Apartmaji Bohinj-Pokljuka
-                    </a>
+    <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-start">
 
-                    <a class="navbar-item" href="https://bulma.io/">
-                        O nas
-                    </a>
+            <div class="navbar-item has-dropdown">
+                <a class="navbar-item" href="index.html">
+                    Apartmaji Bohinj-Pokljuka
+                </a>
 
-                    <a class="navbar-item" href="rezervacija.html">
-                        Rezervacija
-                    </a>
+                <a class="navbar-item" href="O%20nas.html">
+                    O nas
+                </a>
 
-                    <a class="navbar-item" href="https://bulma.io/">
-                        Kontakt
-                    </a>
+                <a class="navbar-item" href="rezervacija.html">
+                    Rezervacija
+                </a>
 
-                </div>
+                <a class="navbar-item" href="kontakt.html">
+                    Kontakt
+                </a>
+
             </div>
         </div>
+    </div>
 
-        <div class="navbar-end">
-            <div class="navbar-item">
-                <div class="buttons">
-                    <a>
-                        <img src="img/uk_flag.svg" alt="English">
-                    </a>
-                </div>
-                <div class="buttons">
-                    <a>
-                        <img src="img/de_flag.svg" alt="Deutsch">
-                    </a>
-                </div>
+    <div class="navbar-end">
+        <div class="navbar-item">
+            <div class="buttons">
+                <a>
+                    <img src="img/uk_flag.svg" alt="English">
+                </a>
+                <a>
+                    <img class="ml-3" src="img/de_flag.svg" alt="Deutsch">
+                </a>
             </div>
         </div>
-    </nav>
-</section>
+    </div>
+</nav>
 
 <section class="has-text-centered">
     <iframe src="https://www.youtube.com/embed/Z1doit0FE7Y" frameborder="0"
@@ -71,7 +66,7 @@
 </section>
 
 <footer class="footer">
-    <div class="content has-text-centered">
+    <div class="content has-text-centered has-text-white">
         <p>
             @2020 | <a href="https://anablaz.com/">Ana Blaž</a>
         </p>
