--- a/rezervacija.html
+++ b/rezervacija.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/c679aa4e88.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="bg-img">
@@ -63,14 +64,14 @@
     </nav>
 </section>
 
-<ul>
-    <li>
-        <a href="airbnb.com"><i title="Apartma 1" class="fab fa-airbnb airbnb fa-2x"></i>"</a>
-    </li>
-    <li>
-        <a href="airbnb.com"><i title="Apartma 2" class="fab fa-airbnb airbnb"></i>"</a>
-    </li>
-</ul>
+<div class="tile is-ancestor">
+    <div class="tile is-3">
+        <a href="https://www.airbnb.com/rooms/19208666"><i title="Ground floor" class="fab fa-airbnb airbnb fa-10x"></i></a>
+    </div>
+    <div class="tile">
+        <a href="https://www.airbnb.com/rooms/36309348"><i title="Apartma 2" class="fab fa-airbnb airbnb fa-10x"></i></a>
+    </div>
+</div>
 
 <footer class="footer">
     <div class="content has-text-centered">
