Continuing on the other pages

--- a/O nas.html
+++ b/O nas.html
@@ -4,8 +4,73 @@
     <meta charset="UTF-8">
     <title>O nas</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<nav class="navbar  is-transparent" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+        <a class="navbar-item" href="https://bulma.io">
+        </a>
+        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+           data-target="navbarBasicExample">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+        </a>
+    </div>
+
+    <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-start">
+
+            <div class="navbar-item has-dropdown">
+                <a class="navbar-item" href="index.html">
+                    Apartmaji Bohinj-Pokljuka
+                </a>
+
+                <a class="navbar-item subnavpage" href="O%20nas.html">
+                    O nas
+                </a>
+
+                <a class="navbar-item" href="rezervacija.html">
+                    Rezervacija
+                </a>
+
+                <a class="navbar-item" href="kontakt.html">
+                    Kontakt
+                </a>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="navbar-end">
+        <div class="navbar-item">
+            <div class="buttons">
+                <a>
+                    <img src="img/uk_flag.svg" alt="English">
+                </a>
+                <a>
+                    <img class="ml-3" src="img/de_flag.svg" alt="Deutsch">
+                </a>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<p>Idilično. Tiho. Sproščujoče.</p>
+<p>Privoščite si oddih v srcu Triglavskega narodnega parka, enem izmed najlepših zakladov Slovenije.</p>
+<p>Za vas imamo na voljo dva apartmaja na stičišču Bohinja in Pokljuke.</p>
+<p>Rezervirajte zdaj, v primeru vprašanj pa se lahko kadarkoli obrnete na nas.</p>
+
+<footer class="footer">
+    <div class="content has-text-centered has-text-white">
+        <p>
+            @2020 | <a href="https://anablaz.com/">Ana Blaž</a>
+        </p>
+    </div>
+</footer>
 
 </body>
 </html>
