--- a/kontakt.html
+++ b/kontakt.html
@@ -4,8 +4,80 @@
     <meta charset="UTF-8">
     <title>Kontakt</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/c679aa4e88.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
+<nav class="navbar  is-transparent" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+        <a class="navbar-item" href="https://bulma.io">
+        </a>
+        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+           data-target="navbarBasicExample">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+        </a>
+    </div>
+
+    <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-start">
+
+            <div class="navbar-item has-dropdown">
+                <a class="navbar-item" href="index.html">
+                    Apartmaji Bohinj-Pokljuka
+                </a>
+
+                <a class="navbar-item" href="O%20nas.html">
+                    O nas
+                </a>
+
+                <a class="navbar-item" href="rezervacija.html">
+                    Rezervacija
+                </a>
+
+                <a class="navbar-item subnavpage" href="kontakt.html">
+                    Kontakt
+                </a>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="navbar-end">
+        <div class="navbar-item">
+            <div class="buttons">
+                <a>
+                    <img src="img/uk_flag.svg" alt="English">
+                </a>
+                <a>
+                    <img class="ml-3" src="img/de_flag.svg" alt="Deutsch">
+                </a>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<section>
+    <div class="tile is-ancestor">
+        <div class="tile email">
+            <a href="mailto:barbara.z.blaz@gmail.com"><i title="Email" class="fas fa-envelope fa-10x"></i></a>
+        </div>
+        <div class="tile airbnb">
+            <a href="https://www.airbnb.com/users/show/134399854"><i title="Airbnb" class="fab fa-airbnb fa-10x"></i></a>
+        </div>
+    </div>
+</section>
+
+<footer class="footer">
+    <div class="content has-text-centered has-text-white">
+        <p>
+            @2020 | <a href="https://anablaz.com/">Ana Blaž</a>
+        </p>
+    </div>
+</footer>
 
 </body>
 </html>
