--- a/rezervacija.html
+++ b/rezervacija.html
@@ -9,72 +9,72 @@
     <script src="https://kit.fontawesome.com/c679aa4e88.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="bg-img">
-</div>
+
+<nav class="navbar  is-transparent" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+        <a class="navbar-item" href="https://bulma.io">
+        </a>
+        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+           data-target="navbarBasicExample">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+        </a>
+    </div>
+
+    <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-start">
+
+            <div class="navbar-item has-dropdown">
+                <a class="navbar-item" href="index.html">
+                    Apartmaji Bohinj-Pokljuka
+                </a>
+
+                <a class="navbar-item" href="O%20nas.html">
+                    O nas
+                </a>
+
+                <a class="navbar-item subnavpage" href="rezervacija.html">
+                    Rezervacija
+                </a>
+
+                <a class="navbar-item" href="kontakt.html">
+                    Kontakt
+                </a>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="navbar-end">
+        <div class="navbar-item">
+            <div class="buttons">
+                <a>
+                    <img src="img/uk_flag.svg" alt="English">
+                </a>
+                <a>
+                    <img class="ml-3" src="img/de_flag.svg" alt="Deutsch">
+                </a>
+            </div>
+        </div>
+    </div>
+</nav>
+
 <section>
-    <nav class="navbar  is-transparent" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-            <a class="navbar-item" href="https://bulma.io">
-            </a>
-            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-            </a>
+    <div class="tile is-ancestor">
+        <div class="tile apt">
+            <img src="img/apt1.jpg" alt="Pritličje">
+            <a href="https://www.airbnb.com/rooms/19208666"><i title="Pritličje" class="fab fa-airbnb airbnb fa-10x"></i></a>
         </div>
-
-        <div id="navbarBasicExample" class="navbar-menu">
-            <div class="navbar-start">
-
-                <div class="navbar-item has-dropdown">
-                    <a class="navbar-item" href="https://bulma.io/">
-                        Apartmaji Bohinj-Pokljuka
-                    </a>
-
-                    <a class="navbar-item" href="https://bulma.io/">
-                        O nas
-                    </a>
-
-                    <a class="navbar-item" href="https://bulma.io/">
-                        Rezervacija
-                    </a>
-
-                    <a class="navbar-item" href="https://bulma.io/">
-                        Kontakt
-                    </a>
-
-                </div>
-            </div>
+        <div class="tile apt">
+            <img src="img/apt2.jpg" alt="Apartma 1">
+            <a href="https://www.airbnb.com/rooms/36309348"><i title="Apartma 2" class="fab fa-airbnb airbnb fa-10x"></i></a>
         </div>
-
-        <div class="navbar-end">
-            <div class="navbar-item">
-                <div class="buttons">
-                    <a>
-                        <img src="img/uk_flag.svg" alt="English">
-                    </a>
-                </div>
-                <div class="buttons">
-                    <a>
-                        <img src="img/de_flag.svg" alt="Deutsch">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </nav>
+    </div>
 </section>
 
-<div class="tile is-ancestor">
-    <div class="tile is-3">
-        <a href="https://www.airbnb.com/rooms/19208666"><i title="Ground floor" class="fab fa-airbnb airbnb fa-10x"></i></a>
-    </div>
-    <div class="tile">
-        <a href="https://www.airbnb.com/rooms/36309348"><i title="Apartma 2" class="fab fa-airbnb airbnb fa-10x"></i></a>
-    </div>
-</div>
-
 <footer class="footer">
-    <div class="content has-text-centered">
+    <div class="content has-text-centered has-text-white">
         <p>
             @2020 | <a href="https://anablaz.com/">Ana Blaž</a>
         </p>
