Continuing on the other pages

--- a/O nas.html
+++ b/O nas.html
@@ -59,10 +59,14 @@
     </div>
 </nav>
 
-<p>Idilično. Tiho. Sproščujoče.</p>
-<p>Privoščite si oddih v srcu Triglavskega narodnega parka, enem izmed najlepših zakladov Slovenije.</p>
-<p>Za vas imamo na voljo dva apartmaja na stičišču Bohinja in Pokljuke.</p>
-<p>Rezervirajte zdaj, v primeru vprašanj pa se lahko kadarkoli obrnete na nas.</p>
+<section class="tile is-ancestor">
+    <div>
+        <p>Idilično. Tiho. Sproščujoče.</p>
+        <p>Privoščite si oddih v srcu Triglavskega narodnega parka, enem izmed najlepših zakladov Slovenije.</p>
+        <p>Za vas imamo na voljo dva apartmaja na stičišču Bohinja in Pokljuke.</p>
+        <p><a href="rezervacija.html">Rezervirajte zdaj,</a> v primeru vprašanj pa se lahko kadarkoli obrnete na nas.</p>
+    </div>
+</section>
 
 <footer class="footer">
     <div class="content has-text-centered has-text-white">
