--- a/rezervacija.html
+++ b/rezervacija.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c679aa4e88.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -60,15 +61,25 @@
     </div>
 </nav>
 
-<section>
-    <div class="tile is-ancestor">
-        <div class="tile apt">
-            <img src="img/apt1.jpg" alt="Pritličje">
-            <a href="https://www.airbnb.com/rooms/19208666"><i title="Pritličje" class="fab fa-airbnb airbnb fa-10x"></i></a>
+<section class="columns">
+    <div class="column apt">
+        <div class="card">
+            <div class="card-image is-relative">
+                <figure class="image is-3by2"><img src="img/apt1.jpg" alt="Pritličje"></figure>
+                <a href="https://www.airbnb.com/rooms/19208666" class="is-overlay has-text-centered"><i
+                        title="Rezerviraj pritličje"
+                        class="fab fa-airbnb airbnb fa-10x"></i></a></div>
+            <div class="card-content"><p class="content has-text-centered">Pritličje</p></div>
         </div>
-        <div class="tile apt">
-            <img src="img/apt2.jpg" alt="Apartma 1">
-            <a href="https://www.airbnb.com/rooms/36309348"><i title="Apartma 2" class="fab fa-airbnb airbnb fa-10x"></i></a>
+    </div>
+    <div class="column apt">
+        <div class="card">
+            <div class="card-image is-relative">
+                <figure class="image is-3by2"><img src="img/apt2.jpg" alt="Apartma 1"></figure>
+                <a href="https://www.airbnb.com/rooms/36309348" class="is-overlay has-text-centered"><i
+                        title="Rezerviraj Apartma 1"
+                        class="fab fa-airbnb airbnb fa-10x"></i></a></div>
+            <div class="card-content"><p class="content has-text-centered">Apartma 1</p></div>
         </div>
     </div>
 </section>
