Continuing on the other pages

--- a/O nas.html
+++ b/O nas.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -59,12 +60,17 @@
     </div>
 </nav>
 
-<section class="tile is-ancestor">
-    <div>
-        <p>Idilično. Tiho. Sproščujoče.</p>
-        <p>Privoščite si oddih v srcu Triglavskega narodnega parka, enem izmed najlepših zakladov Slovenije.</p>
-        <p>Za vas imamo na voljo dva apartmaja na stičišču Bohinja in Pokljuke.</p>
-        <p><a href="rezervacija.html">Rezervirajte zdaj,</a> v primeru vprašanj pa se lahko kadarkoli obrnete na nas.</p>
+<section class="columns">
+    <div class="column has-text-centered is-two-thirds is-offset-2">
+
+        <div class="box opis">
+            <h1 class="title">Hiša z razgledom</h1>
+            <p>Idilično. Tiho. Sproščujoče.</p>
+            <p>Privoščite si oddih v srcu Triglavskega narodnega parka, enem izmed najlepših zakladov Slovenije.</p>
+            <p>Za vas imamo na voljo dva apartmaja na stičišču Bohinja in Pokljuke.</p>
+            <p><a href="rezervacija.html">Rezervirajte zdaj,</a> v primeru vprašanj pa se lahko kadarkoli <a
+                    href="kontakt.html">obrnete na nas.</a></p>
+        </div>
     </div>
 </section>
 
