--- a/kontakt.html
+++ b/kontakt.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c679aa4e88.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -60,15 +61,17 @@
     </div>
 </nav>
 
-<section>
-    <div class="tile is-ancestor">
-        <div class="tile email">
+<section class="columns">
+
+        <div class="column email has-text-centered">
+            <p class="title">Email: barbara.z.blaz@gmail.com</p>
             <a href="mailto:barbara.z.blaz@gmail.com"><i title="Email" class="fas fa-envelope fa-10x"></i></a>
         </div>
-        <div class="tile airbnb">
+        <div class="column airbnb has-text-centered">
+            <p class="title">Airbnb profil:</p>
             <a href="https://www.airbnb.com/users/show/134399854"><i title="Airbnb" class="fab fa-airbnb fa-10x"></i></a>
         </div>
-    </div>
+
 </section>
 
 <footer class="footer">
