Continuing on the other pages

--- a/rezervacija.html
+++ b/rezervacija.html
@@ -63,24 +63,28 @@
 
 <section class="columns">
     <div class="column apt">
-        <div class="card">
-            <div class="card-image is-relative">
-                <figure class="image is-3by2"><img src="img/apt1.jpg" alt="Pritličje"></figure>
-                <a href="https://www.airbnb.com/rooms/19208666" class="is-overlay has-text-centered"><i
-                        title="Rezerviraj pritličje"
-                        class="fab fa-airbnb airbnb fa-10x"></i></a></div>
-            <div class="card-content"><p class="content has-text-centered">Pritličje</p></div>
-        </div>
+        <a href="https://www.airbnb.com/rooms/19208666">
+            <div class="card has-text-centered">
+                <div class="card-image is-relative">
+                    <figure class="image is-3by2"><img src="img/apt1.jpg" alt="Pritličje"></figure>
+                    <i
+                            title="Rezerviraj pritličje"
+                            class="fab fa-airbnb airbnb fa-10x is-overlay"></i></div>
+                <div class="card-content"><p class="content">Pritličje</p></div>
+            </div>
+        </a>
     </div>
     <div class="column apt">
-        <div class="card">
-            <div class="card-image is-relative">
-                <figure class="image is-3by2"><img src="img/apt2.jpg" alt="Apartma 1"></figure>
-                <a href="https://www.airbnb.com/rooms/36309348" class="is-overlay has-text-centered"><i
-                        title="Rezerviraj Apartma 1"
-                        class="fab fa-airbnb airbnb fa-10x"></i></a></div>
-            <div class="card-content"><p class="content has-text-centered">Apartma 1</p></div>
-        </div>
+        <a href="https://www.airbnb.com/rooms/36309348">
+            <div class="card has-text-centered">
+                <div class="card-image is-relative">
+                    <figure class="image is-3by2"><img src="img/apt2.jpg" alt="Apartma 1"></figure>
+                    <i
+                            title="Rezerviraj Apartma 1"
+                            class="fab fa-airbnb airbnb fa-10x is-overlay"></i></div>
+                <div class="card-content"><p class="content">Apartma 1</p></div>
+            </div>
+        </a>
     </div>
 </section>
 
