Rename O nas.html into o_nas.html

--- a/kontakt.html
+++ b/kontakt.html
@@ -31,7 +31,7 @@
                     Apartmaji Bohinj-Pokljuka
                 </a>
 
-                <a class="navbar-item" href="O%20nas.html">
+                <a class="navbar-item" href="o_nas.html">
                     O nas
                 </a>
 
