--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     Apartmaji Bohinj-Pokljuka
                 </a>
 
-                <a class="navbar-item" href="O%20nas.html">
+                <a class="navbar-item" href="o_nas.html">
                     O nas
                 </a>
 
