--- a/o_nas.html
+++ b/o_nas.html
@@ -30,7 +30,7 @@
                     Apartmaji Bohinj-Pokljuka
                 </a>
 
-                <a class="navbar-item subnavpage" href="O%20nas.html">
+                <a class="navbar-item subnavpage" href="o_nas.html">
                     O nas
                 </a>
 
