--- a/kontakt.html
+++ b/kontakt.html
@@ -3,59 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <title>Kontakt</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/c679aa4e88.js" crossorigin="anonymous"></script>
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <script crossorigin="anonymous" src="https://kit.fontawesome.com/c679aa4e88.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <script src="menu.js"></script>
 </head>
 <body>
 
-<nav class="navbar  is-transparent" role="navigation" aria-label="main navigation">
+<nav aria-label="main navigation" class="navbar is-transparent" role="navigation">
     <div class="navbar-brand">
-        <a class="navbar-item" href="https://bulma.io">
+        <a class="navbar-item" href="index.html">
+            Apartmaji Bohinj-Pokljuka
         </a>
-        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
-           data-target="navbarBasicExample">
+
+        <a aria-expanded="false" aria-label="menu" class="navbar-burger burger" data-target="navbarMenu"
+           role="button">
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
         </a>
     </div>
 
-    <div id="navbarBasicExample" class="navbar-menu">
+    <div class="navbar-menu" id="navbarMenu">
         <div class="navbar-start">
+            <a class="navbar-item" href="o_nas.html">
+                O nas
+            </a>
 
-            <div class="navbar-item has-dropdown">
-                <a class="navbar-item" href="index.html">
-                    Apartmaji Bohinj-Pokljuka
-                </a>
+            <a class="navbar-item" href="rezervacija.html">
+                Rezervacija
+            </a>
 
-                <a class="navbar-item" href="o_nas.html">
-                    O nas
-                </a>
-
-                <a class="navbar-item" href="rezervacija.html">
-                    Rezervacija
-                </a>
-
-                <a class="navbar-item subnavpage" href="kontakt.html">
-                    Kontakt
-                </a>
-
-            </div>
+            <a class="navbar-item subnavpage" href="kontakt.html">
+                Kontakt
+            </a>
         </div>
-    </div>
 
-    <div class="navbar-end">
-        <div class="navbar-item">
-            <div class="buttons">
-                <a>
-                    <img src="img/uk_flag.svg" alt="English">
-                </a>
-                <a>
-                    <img class="ml-3" src="img/de_flag.svg" alt="Deutsch">
-                </a>
+        <div class="navbar-end">
+            <div class="navbar-item">
+                <div class="buttons">
+                    <a>
+                        <img alt="English" src="img/uk_flag.svg">
+                    </a>
+                    <a>
+                        <img alt="Deutsch" class="ml-3" src="img/de_flag.svg">
+                    </a>
+                </div>
             </div>
         </div>
     </div>
@@ -63,16 +58,16 @@
 
 <section class="columns">
 
-        <div class="column email has-text-centered">
-            <a href="mailto:barbara.z.blaz@gmail.com">
+    <div class="column email has-text-centered">
+        <a href="mailto:barbara.z.blaz@gmail.com">
             <p class="title">barbara.z.blaz@gmail.com</p>
-            <i title="Email" class="fas fa-envelope fa-10x"></i></a>
-        </div>
-        <div class="column airbnb has-text-centered">
-            <a href="https://www.airbnb.com/users/show/134399854">
+            <i class="fas fa-envelope fa-10x" title="Email"></i></a>
+    </div>
+    <div class="column airbnb has-text-centered">
+        <a href="https://www.airbnb.com/users/show/134399854">
             <p class="title">Airbnb profil</p>
-            <i title="Airbnb" class="fab fa-airbnb fa-10x"></i></a>
-        </div>
+            <i class="fab fa-airbnb fa-10x" title="Airbnb"></i></a>
+    </div>
 
 </section>
 
