Adding EN pages

--- a/kontakt_EN.html
+++ b/kontakt_EN.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="sl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kontakt</title>
+    <title>Apartments Bohinj-Pokljuka</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
-    <script crossorigin="anonymous" src="https://kit.fontawesome.com/c679aa4e88.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <script src="menu.js"></script>
 </head>
@@ -15,7 +14,7 @@
 <nav aria-label="main navigation" class="navbar is-transparent" role="navigation">
     <div class="navbar-brand">
         <a class="navbar-item" href="index.html">
-            Apartmaji Bohinj-Pokljuka
+            Apartments Bohinj-Pokljuka
         </a>
 
         <a aria-expanded="false" aria-label="menu" class="navbar-burger burger" data-target="navbarMenu"
@@ -28,24 +27,24 @@
 
     <div class="navbar-menu" id="navbarMenu">
         <div class="navbar-start">
-            <a class="navbar-item" href="o_nas.html">
-                O nas
+            <a class="navbar-item" href="o_nas_EN.html">
+                About
             </a>
 
-            <a class="navbar-item" href="rezervacija.html">
-                Rezervacija
+            <a class="navbar-item" href="rezervacija_EN.html">
+                Reservation
             </a>
 
-            <a class="navbar-item subnavpage" href="kontakt.html">
-                Kontakt
+            <a class="navbar-item" href="kontakt_EN.html">
+                Contact
             </a>
         </div>
 
         <div class="navbar-end">
             <div class="navbar-item">
                 <div class="buttons">
-                    <a href="kontakt_EN.html">
-                        <img alt="English" src="img/uk_flag.svg">
+                    <a href="kontakt.html">
+                        <img alt="Slovenian" src="img/slo_flag.svg">
                     </a>
                     <a>
                         <img alt="Deutsch" class="ml-3" src="img/de_flag.svg">
