--- a/o_nas.html
+++ b/o_nas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sl">
 <head>
     <meta charset="UTF-8">
     <title>O nas</title>
@@ -43,7 +43,7 @@
         <div class="navbar-end">
             <div class="navbar-item">
                 <div class="buttons">
-                    <a>
+                    <a href="o_nas_EN.html">
                         <img alt="English" src="img/uk_flag.svg">
                     </a>
                     <a>
