--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sl">
 <head>
     <meta charset="UTF-8">
-    <title>Apartmaji Bohinj/Pokljuka</title>
+    <title>Apartmaji Bohinj-Pokljuka</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
@@ -43,7 +43,7 @@
         <div class="navbar-end">
             <div class="navbar-item">
                 <div class="buttons">
-                    <a>
+                    <a href="index_EN.html">
                         <img alt="English" src="img/uk_flag.svg">
                     </a>
                     <a>
