--- a/index_EN.html
+++ b/index_EN.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="sl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kontakt</title>
+    <title>Apartments Bohinj-Pokljuka</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
-    <script crossorigin="anonymous" src="https://kit.fontawesome.com/c679aa4e88.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <script src="menu.js"></script>
 </head>
@@ -15,7 +14,7 @@
 <nav aria-label="main navigation" class="navbar is-transparent" role="navigation">
     <div class="navbar-brand">
         <a class="navbar-item" href="index.html">
-            Apartmaji Bohinj-Pokljuka
+            Apartments Bohinj-Pokljuka
         </a>
 
         <a aria-expanded="false" aria-label="menu" class="navbar-burger burger" data-target="navbarMenu"
@@ -28,24 +27,24 @@
 
     <div class="navbar-menu" id="navbarMenu">
         <div class="navbar-start">
-            <a class="navbar-item" href="o_nas.html">
-                O nas
+            <a class="navbar-item" href="o_nas_EN.html">
+                About
             </a>
 
-            <a class="navbar-item" href="rezervacija.html">
-                Rezervacija
+            <a class="navbar-item" href="rezervacija_EN.html">
+                Reservation
             </a>
 
-            <a class="navbar-item subnavpage" href="kontakt.html">
-                Kontakt
+            <a class="navbar-item" href="kontakt_EN.html">
+                Contact
             </a>
         </div>
 
         <div class="navbar-end">
             <div class="navbar-item">
                 <div class="buttons">
-                    <a href="kontakt_EN.html">
-                        <img alt="English" src="img/uk_flag.svg">
+                    <a href="index.html">
+                        <img alt="Slovenian" src="img/slo_flag.svg">
                     </a>
                     <a>
                         <img alt="Deutsch" class="ml-3" src="img/de_flag.svg">
@@ -57,18 +56,13 @@
 </nav>
 
 <section class="columns">
-
-    <div class="column email has-text-centered">
-        <a href="mailto:barbara.z.blaz@gmail.com">
-            <p class="title">barbara.z.blaz@gmail.com</p>
-            <i class="fas fa-envelope fa-10x" title="Email"></i></a>
+    <div class="column is-two-thirds is-offset-2">
+        <figure class="image is-16by9 box">
+            <iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen class="has-ratio"
+                    src="https://www.youtube.com/embed/Z1doit0FE7Y"></iframe>
+        </figure>
     </div>
-    <div class="column airbnb has-text-centered">
-        <a href="https://www.airbnb.com/users/show/134399854">
-            <p class="title">Airbnb profil</p>
-            <i class="fab fa-airbnb fa-10x" title="Airbnb"></i></a>
-    </div>
-
 </section>
 
 <footer class="footer">
