--- a/rezervacija.html
+++ b/rezervacija.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sl">
 <head>
     <meta charset="UTF-8">
     <title>Rezervacija</title>
@@ -44,7 +44,7 @@
         <div class="navbar-end">
             <div class="navbar-item">
                 <div class="buttons">
-                    <a>
+                    <a href="rezervacija_EN.html">
                         <img alt="English" src="img/uk_flag.svg">
                     </a>
                     <a>
