Aligning <head> elements of the sl and en pages with the same content

--- a/o_nas_EN.html
+++ b/o_nas_EN.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Apartments Bohinj-Pokljuka</title>
+    <title>About</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
@@ -13,7 +13,7 @@
 
 <nav aria-label="main navigation" class="navbar is-transparent" role="navigation">
     <div class="navbar-brand">
-        <a class="navbar-item" href="index.html">
+        <a class="navbar-item" href="index_EN.html">
             Apartments Bohinj-Pokljuka
         </a>
 
@@ -61,7 +61,7 @@
         <div class="box opis">
             <h1 class="title">A House with the View</h1>
             <p>Idylic. Quiet. Relaxing.</p>
-            <p>Treat yourself to a break in the heart of the Triglav National Park, one of the most beautiful Slovenian
+            <p>Treat yourself to a break in the heart of the Triglav National Park, one of Slovenian
                 treasures.</p>
             <p>We are offering you two apartments, located at the intersection of Bohinj and Pokljuka.</p>
             <p><a href="rezervacija.html">Book now,</a>and in case of questions you can always <a
