--- a/index_EN.html
+++ b/index_EN.html
@@ -13,7 +13,7 @@
 
 <nav aria-label="main navigation" class="navbar is-transparent" role="navigation">
     <div class="navbar-brand">
-        <a class="navbar-item" href="index.html">
+        <a class="navbar-item" href="index_EN.html">
             Apartments Bohinj-Pokljuka
         </a>
 
