--- a/kontakt_EN.html
+++ b/kontakt_EN.html
@@ -2,18 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Apartments Bohinj-Pokljuka</title>
+    <title>Contact</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <script crossorigin="anonymous" src="https://kit.fontawesome.com/c679aa4e88.js"></script>
     <script src="menu.js"></script>
 </head>
 <body>
 
 <nav aria-label="main navigation" class="navbar is-transparent" role="navigation">
     <div class="navbar-brand">
-        <a class="navbar-item" href="index.html">
+        <a class="navbar-item" href="index_EN.html">
             Apartments Bohinj-Pokljuka
         </a>
 
