Fixing the language in kontakt_EN.html

--- a/kontakt_EN.html
+++ b/kontakt_EN.html
@@ -65,7 +65,7 @@
     </div>
     <div class="column airbnb has-text-centered">
         <a href="https://www.airbnb.com/users/show/134399854">
-            <p class="title">Airbnb profil</p>
+            <p class="title">Airbnb profile</p>
             <i class="fab fa-airbnb fa-10x" title="Airbnb"></i></a>
     </div>
 
