Adding the subnavpage class on the english pages (bolding the page name you're on in subnav)

--- a/kontakt_EN.html
+++ b/kontakt_EN.html
@@ -36,7 +36,7 @@
                 Reservation
             </a>
 
-            <a class="navbar-item" href="kontakt_EN.html">
+            <a class="navbar-item subnavpage" href="kontakt_EN.html">
                 Contact
             </a>
         </div>
