--- a/o_nas_EN.html
+++ b/o_nas_EN.html
@@ -27,7 +27,7 @@
 
     <div class="navbar-menu" id="navbarMenu">
         <div class="navbar-start">
-            <a class="navbar-item" href="o_nas_EN.html">
+            <a class="navbar-item subnavpage" href="o_nas_EN.html">
                 About
             </a>
 
