--- a/rezervacija_EN.html
+++ b/rezervacija_EN.html
@@ -32,7 +32,7 @@
                 About
             </a>
 
-            <a class="navbar-item" href="rezervacija_EN.html">
+            <a class="navbar-item subnavpage" href="rezervacija_EN.html">
                 Reservation
             </a>
 
