--- a/o_nas_EN.html
+++ b/o_nas_EN.html
@@ -64,7 +64,7 @@
             <p>Treat yourself to a break in the heart of the Triglav National Park, one of Slovenian
                 treasures.</p>
             <p>We are offering you two apartments, located at the intersection of Bohinj and Pokljuka.</p>
-            <p><a href="rezervacija.html">Book now,</a>and in case of questions you can always <a
+            <p><a href="rezervacija.html">Book now</a>, and in case of questions you can always <a
                     href="kontakt.html">turn to us.</a></p>
         </div>
     </div>
